--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
+    "lib": ["es2020"],
+    "module": "commonjs",
+    "target": "es2020",
+    "strict": true,
     "outDir": "dist",
     "noImplicitAny": false,
     "removeComments": true,
     "esModuleInterop": true,
-    "declaration": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node"
   },
   "include": [
