--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "lib": ["es2020"],
+    "module": "commonjs",
+    "target": "es2020",
+    // "strict": true,
     "outDir": "dist",
     "noImplicitAny": false,
     "removeComments": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node"
   },
   "include": [
